2023-12-08  Niels Möller  <nisse@lysator.liu.se>

	Delete all md5 assembly code.
	* md5.c (nettle_md5_compress): Move function and related macros
	here, from...
	* md5-compress.c: ... deleted file.
	* x86/md5-compress.asm: Deleted file.
	* x86_64/md5-compress.asm: Deleted file.

	* configure.ac: When checking for openssl, use AC_LINK_IFELSE to
	check if needed functions really are available. Just using
	AC_CHECK_LIB to check for, e.g., EVP_RSA_gen, doesn't work, since
	that is a macro that depends on including openssl/rsa.h.'

2023-12-06  Niels Möller  <nisse@lysator.liu.se>

	* drbg-ctr-aes256.c (drbg_ctr_aes256_output): New helper function.
	(drbg_ctr_aes256_update, drbg_ctr_aes256_random): Use it.

	From Simon Josefsson:
	* drbg-ctr.h (struct drbg_ctr_aes256_ctx): New context struct.
	(DRBG_CTR_AES256_SEED_SIZE): New constant.
	* drbg-ctr-aes256.c (drbg_ctr_aes256_update)
	(drbg_ctr_aes256_init, drbg_ctr_aes256_random): New file, new functions.

	* testsuite/drbg-ctr-aes256-test.c: New testcase.
	* nettle.texinfo (Randomness): Document DRBG-CTR.

2023-12-05  Niels Möller  <nisse@lysator.liu.se>

	From Tim Kosse:
	* fat-arm64.c (check_sysctlbyname) [__APPLE__]: New function.
	(get_arm64_features) [__APPLE__]: Fix feature detection for Apple
	M1 devices.

	* configure.ac: In openssl tests, check for the headers actually
	used by the benchmarking code, and for a subset of the relevant
	functions.

	* examples/nettle-openssl.c: Trim openssl includes and defines,
	and use Nettle's definition of sha1 and md5 constants.
	(nettle_openssl_init): Deleted.
	* examples/nettle-benchmark.c (main): Delete call to nettle_openssl_init.

2023-12-04  Niels Möller  <nisse@lysator.liu.se>

	* examples/nettle-openssl.c (nettle_openssl_blowfish128)
	(nettle_openssl_des, openssl_cast128_set_encrypt_key): Deleted,
	since these algorithms are now available in openssl only via the
	"legacy provider". Also deleted declarations and usage.
