@@ -238,6 +238,104 @@ test_main(void)
 	    SHEX("cafebabefacedbaddecaf888"),
 	    SHEX("796836f1246c9d735c5e1be0a715ccc3"));
 
+  /* Test 719 bytes */
+  test_aead(&nettle_gcm_aes256, NULL,
+	    SHEX("6235f895fca5ebf60e921204d3a13f2e"
+	         "8b32cfe744ed1359043877b0b9adb438"),
+	    SHEX(""),
+	    SHEX("42c1cc08486f413f2f11668b2a16f0e0"
+		"5883f0c37014c05b3fec1d253c51d203"
+		"cf59741fb285b407c66a63398a5bdecb"
+		"af0844bd6f9115e1f57a6e18bddd6150"
+		"59a997abbb0e745c00a4435404549b3b"
+		"77ecfd5ca6e87b08aee6103f3265d1fc"
+		"a41d2c31fb337ab33523f42041d4ad82"
+		"8ba4ad961c2053be0ea6f4dc78493e72"
+		"b1a9b583cb0854b7ad493aae98cea666"
+		"1030908c5583d77c8be653ded26e1821"
+		"0152d19f9dbb9c7357cc8909759b7870"
+		"ed26974db4e40ca5fa700470c6961c7d"
+		"544177a8e3b07e9682d9eca2876855f9"
+		"8f9e7343476a08369367a82ddeac41a9"
+		"5c4d73970f7068fa564d00c23b1fc8b9"
+		"781f5107e39a134eed2b2ea3f744b2e7"
+		"ab1937d9ba765ed2f25315174c6b169f"
+		"026649ca7c9105f245361ef577ad1f46"
+		"a813fb63b608996382a2edb3acdf4319"
+		"45ea7873d9b73911a3137cf83ff7ad81"
+		"482fa95c5fa0f079a4477d802026fd63"
+		"0ac77e6d7547ff76662e8a6c8135af0b"
+		"2e6a4960c110e1e15403a4090c377a15"
+		"23275b8b4ba56497ae4a50731f661c5c"
+		"03253c8d485871340eec4e551a036ae5"
+		"b6192b842a20d1ea806f960e0562c778"
+		"8779603846b425576e1663f8ad6ed742"
+		"69e188ef6ed5b49a3c786c3be5a01d22"
+		"865c743aeb2426c709fc919647874f1a"
+		"d66b2c1847c0b824a85a4a9ecb03e72a"
+		"09e64d9c6d8660f52f4869379ff2d2cb"
+		"0e5add6e8afb6afe0b63de8742798a68"
+		"51289b7aebafb82f9dd1c7459008c983"
+		"e98384cb28690969ce99460054cbd838"
+		"f9534abf31ce571533fa96043342e3c0"
+		"b7544a657a7c02e61995d00e820763f9"
+		"e12b2afc559252c9b59f232860e72051"
+		"10d3ed6d9babb8e25d9a34b3be9c64cb"
+		"78c69122409180bed7785c0e0adc08e9"
+		"6710a483987923e792daa92216b1e778"
+		"a31c6c8f357c4d372f6e0b505c34b9f9"
+		"e63d910d3295aa3d481106bb2df26388"
+		"3f7309e245563151fa5e4e62f790f9a9"
+		"7d7b1bb1c8266e66f6909a7ff257cc23"
+		"59fafaaa440401a7a478db743d8bb5"),
+	    SHEX("840bdbd5b7a8fe20bbb1127f41eab3c0"
+		 "a2b437191158b60b4c1d380554d11673"
+		 "8e1c2090a29ab77447e6d8fc183ab4ea"
+		 "d5165a2c530146b31833746c50f2e8c0"
+		 "73da6022ebe3e59b20936c4b3799b823"
+		 "3b4eace85be80fb7c38ffb4a37d93995"
+		 "34f1db8f71d9c70b02f163fc9bfcc5ab"
+		 "b9141321dfceaa8844301ece260192f8"
+		 "9f004b0c4bf75fe089ca9466112197ca"
+		 "3e83742ddb4d11eb97c214ff9e1ea06b"
+		 "08b4312b85c6856c90ec39c0ecb3b54e"
+		 "f39ce7833a770af456fece18336d0b2d"
+		 "33dac8055cb4092ade6b529801ef363d"
+		 "bdf98fa83eaacdd1012d4249c3b684bb"
+		 "4896e090936c4864d4fa7f932ca621c8"
+		 "7a237baa205612ae169d940f54a1ecca"
+		 "514ef239f4f85f045a0dbff583a115e1"
+		 "f53cd862a3ed4789854ce5dbac9e171d"
+		 "0c09e33e395b4d740ef534ee70114cfd"
+		 "db34b1b5103f73b7f5faedb01fa5cd3c"
+		 "8d3583d411446e6c5be00e69a539e5bb"
+		 "a9572437e61fddcf162a13f96a2d90a0"
+		 "03607aed69d5008b7e4fcbb9fa91b937"
+		 "c126ce9097226464c172431bf6acc154"
+		 "8a109cdd8dd58eb2e485dae0205ff4b4"
+		 "15b5a08d127449233adf4ad3f03b89eb"
+		 "f8cc627bfb9307416126945870a63ce4"
+		 "ff58c4133dcb366b32e5b26d03746f76"
+		 "9377de48c4fa304ada4980770f1cbe11"
+		 "c848b1e5bbf28ae1962f9fd18e8a5ce2"
+		 "f7d7d854f33fc491b8fb86dc46249160"
+		 "6c2fc94137514954098121f3039f2be3"
+		 "1f3963aff4d75360a7c754f9eeb1b17d"
+		 "75546593feb1686b5702f9bb0ef9f8bf"
+		 "011227b4fee4797a405b514bdf38ecb1"
+		 "6a56ff354d4233aa6f1be4dce0db8535"
+		 "6210d4ecebc57e451c6f17ca3b8e2d66"
+		 "4f4b3656cd1b59aad29b17b958df7b64"
+		 "8aff3b9ca6b5489eaae25d0971325fb6"
+		 "29bee7c7527e91826b6d33e134063621"
+		 "5ebe1e2f3ec1fbea492cb5caf7b037ea"
+		 "1fed1004d9480d1a1cfbe7840e835374"
+		 "c765e25ce5ba734c0ee1b51145614346"
+		 "aa258fbd8508fa4c15c1c0d8f5dc16bb"
+		 "7b1de38757a72a1d38589e8a43dc57"),
+	    SHEX("00ffffffff0000ffffff00ff"),
+	    SHEX("d1817d2be9ff993a4b24525855e14914"));
+
   /* Test case 7 */
   test_aead(&nettle_gcm_aes192, NULL,
 	    SHEX("00000000000000000000000000000000"
